--- a/src/app/recipes/recipe-edit/recipe-edit.component.scss
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.scss
@@ -1,4 +1,10 @@
 input.ng-invalid.ng-touched, 
 textarea.ng-invalid.ng-touched{
-    border: 1px solid red;
+    border: 1px solid #dd1b1b;
+}
+button[type="submit"]{
+    margin-right: 10px;
+}
+.options{
+    margin-bottom: 20px;
 }
