--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,15 +1,22 @@
-<div class="row">
-  <div class="col-sm-12 col-md-10 col-sm-offset-1 col-md-offset-2">  
-    <form (ngSubmit)="onSignUp(signupForm)" #signupForm=ngForm>
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="text" id="email" name="email" ngModel class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="pass">Password</label>
-        <input type="password" id="pass" name="password" ngModel class="form-control">
-      </div>
-      <button class="btn btn-primary" type="submit">Signup</button>
-    </form>
-  </div> 
+<div class="container">
+  <div class="card">
+    <div class="card-header">
+      <h3>Register</h3>
+    </div>
+    <div class="card-body">
+      <form (ngSubmit)="onSignUp(signupForm)" #signupForm=ngForm>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="text" id="email" name="email" ngModel class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="pass">Password</label>
+          <input type="password" id="pass" name="password" ngModel class="form-control">
+        </div>
+        <div class="text-center">
+          <button class="btn btn-custom" type="submit">Sign Up</button>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
