--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -1,17 +1,8 @@
-<div class="row">
-	<div class="col-xm-12">
-		<img src="{{item.imgPath}}" class="img-fluid" alt="" width="100%">
-	</div>
-</div>
-<div class="row">
-	<div class="col-xm-12">
-		<h1>{{item.name}}</h1>
-	</div>
-</div>
-<div class="row">
-	<div class="col-xm-12">
-		<div class="btn-group show" appDropdown>
-			<button class="btn btn-primary dropdown-toggle" type="button">Edit <span class="caret"></span></button>
+<div class="card">
+	<div class="card-header">
+		<h2 class="d-inline-block">{{item.name}}</h2>
+		<div class="btn-group show d-inline-block pull-right" appDropdown>
+			<button class="btn btn-primary dropdown-toggle" type="button"><i class="fa fa-gear"></i><span class="caret"></span></button>
 			<ul class="dropdown-menu">
 				<li class="dropdown-item"><a style="cursor: pointer;" (click)="addToShoppingList()">To Shopping List</a></li>
 				<li class="dropdown-item"><a style="cursor: pointer;" (click)="editRecipe()">Edit Recipe</a></li>
@@ -19,14 +10,12 @@
 			</ul>
 		</div>
 	</div>
-</div>
-<div class="row">
-	<div class="col-xm-12">
+	<div class="card-body">
+		<img src="{{item.imgPath}}" class="img-fluid" alt="" width="100%">
+		<hr>
 		{{item.description}}
-	</div>
-</div>
-<div class="row">
-	<div class="col-xm-12">
+		<hr>
+		<h5>Ingradients</h5>
 		<ul class="list-group">
 			<li class="list-group-item" *ngFor="let ingredient of item.ingredients">
 				{{ ingredient.name }} - {{ ingredient.amount }}
