--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,46 +1,33 @@
 <div class="row">
   <div class="col-sm-12">
     <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
-      <div class="row">
-        <div class="col-sm-12">
+      <div class="options">
           <button class="btn btn-success" 
           type="submit"
           [disabled]="!recipeForm.valid">Save</button>
           <button class="btn btn-danger" 
           type="button"
           (click)="cancelEdit()">Cancel</button>
-        </div>
       </div>
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" id="name" class="form-control" formControlName="name">
-          </div>
-        </div>
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" id="name" class="form-control" formControlName="name">
       </div>
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="form-group">
-            <label for="imgPath">Iamge Url</label>
-            <input type="text" id="imgPath" class="form-control" formControlName="imgPath" #imgPath>
-          </div>
-        </div>
+      <div class="form-group">
+        <label for="imgPath">Image Url</label>
+        <input type="text" id="imgPath" class="form-control" formControlName="imgPath" #imgPath>
       </div>
       <div class="row">
         <div class="col-sm-12">
           <img [src]="imgPath.value" alt="" class="img-fluid">
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="form-group">
-            <label for="description">Description</label>
-            <textarea id="description" rows="5" class="form-control" 
-            formControlName="description"></textarea>
-          </div>
-        </div>
+      <div class="form-group">
+        <label for="description">Description</label>
+        <textarea id="description" rows="5" class="form-control" 
+        formControlName="description"></textarea>
       </div>
+    
       <div class="row" formArrayName="ingredients">
         <div class="col-sm-12">
           <div class="row" 
