--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,8 +1,8 @@
-<div class="row">
-	<div class="col-sm-12">
+<!-- <div class="row">
+	<div class="col-sm-12"> -->
 		<button class="btn btn-success" (click)="AddNewRecipe()">New Recipe</button>
-	</div>
-</div>
+	<!-- </div>
+</div> -->
 <hr>
 <div class="row">
 	<div class="col-sm-12" *ngFor="let recipe of recipes; let i = index">
