--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-xs-10">
+	<div class="col-sm-6">
 		<app-shoppping-edit></app-shoppping-edit>
 	<hr>
 	<ul class="list-group">
@@ -10,4 +10,5 @@
 			{{ingredient.name}} ({{ingredient.amount}})
 		</a></li>
 	</ul>
+	</div>
 </div>
