--- a/src/app/shopping-list/shoppping-edit/shoppping-edit.component.html
+++ b/src/app/shopping-list/shoppping-edit/shoppping-edit.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-xm-12">
+	<div class="col-md-12">
 		<form (ngSubmit)="onAddItem(addItemForm)" #addItemForm="ngForm">
 			<div class="row">
 				<div class="col-sm-5 form-group">
@@ -14,7 +14,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-12">
+				<div class="col-sm-12">
 					<button class="btn btn-success" 
 					[disabled]="!addItemForm.valid" 
 					type="submit">{{editMode ? 'Update': 'Add'}}</button>
